# IntelligentRAGSystem

./: .gitignore  PROJECT_MASTER_PLAN.md  README.md  create_source_files.sh  debug_ollama.py  main.py  pyproject.toml  run.ps1  run.sh
config/: settings.py
src/: chat_interface.py  document_processor.py  embedding_manager.py  rag_system.py  system_health_checker.py
tests/: test_simple.py
